align dd to dt tags (correct font-family/font-weight offset)

--- a/app/assets/stylesheets/handout.css.sass
+++ b/app/assets/stylesheets/handout.css.sass
@@ -95,6 +95,7 @@ strong, b
 
   dl
     +clearfix
+
   dt
     padding: 0.25em 0
     font-weight: bold
@@ -107,7 +108,7 @@ strong, b
     @extend .pbi-avoid
 
   dd
-    padding: 0.25em 0
+    padding: 0.083em 0 0.25em 0
     margin-left: 215px
     font-size: 9pt
     line-height: 1.35em
