--- a/app/assets/stylesheets/partials/_real_estates.css.sass
+++ b/app/assets/stylesheets/partials/_real_estates.css.sass
@@ -131,7 +131,7 @@ td
 
   dd
     +clearfix
-    padding: 0.25em 0
+    padding: 0.400em 0 0.25em 0
     margin-left: 215px
 
     p
